[gd_scene load_steps=12 format=3 uid="uid://didx6mole82yn"]

[ext_resource type="Script" path="res://Scripts/paddle_select.gd" id="1_7djbj"]
[ext_resource type="PackedScene" uid="uid://bd8ulq0ty5m6t" path="res://player.tscn" id="1_g7fm4"]
[ext_resource type="FontFile" uid="uid://ch4t5w1jud0i0" path="res://Assets/fonts/font.ttf" id="2_0lpii"]
[ext_resource type="Texture2D" uid="uid://dmpb3f76i5qce" path="res://Assets/graphics/arrows.png" id="3_eu60v"]
[ext_resource type="Script" path="res://Scripts/Left Arrow.gd" id="5_7bal4"]
[ext_resource type="Script" path="res://Scripts/Right Arrow.gd" id="6_vgeet"]
[ext_resource type="AudioStream" uid="uid://o8t1v5eji6iu" path="res://Assets/sounds/confirm.wav" id="7_khcpm"]
[ext_resource type="AudioStream" uid="uid://de6ysy0vasr1k" path="res://Assets/sounds/select.wav" id="8_p2kup"]
[ext_resource type="AudioStream" uid="uid://bbj0cjthxnob6" path="res://Assets/sounds/no-select.wav" id="9_aipxe"]

[sub_resource type="LabelSettings" id="LabelSettings_5medr"]
font = ExtResource("2_0lpii")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gilky"]
font = ExtResource("2_0lpii")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Paddle Select" type="Node2D"]
script = ExtResource("1_7djbj")

[node name="Player" parent="." instance=ExtResource("1_g7fm4")]
position = Vector2(640, 650)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 250.0
offset_top = 150.0
offset_right = 997.0
offset_bottom = 208.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Press The Arrows to Select Your Paddle"
label_settings = SubResource("LabelSettings_5medr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Press Enter to Confirm Your Selection"
label_settings = SubResource("LabelSettings_gilky")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left Arrow" type="Sprite2D" parent="."]
position = Vector2(400, 650)
scale = Vector2(2, 2)
texture = ExtResource("3_eu60v")
region_enabled = true
region_rect = Rect2(0, 0, 24, 24)
script = ExtResource("5_7bal4")

[node name="Right Arrow" type="Sprite2D" parent="."]
position = Vector2(900, 650)
scale = Vector2(2, 2)
texture = ExtResource("3_eu60v")
region_enabled = true
region_rect = Rect2(24, 0, 24, 24)
script = ExtResource("6_vgeet")

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_khcpm")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_p2kup")

[node name="NoSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_aipxe")
